--- a/questions.html
+++ b/questions.html
@@ -43,6 +43,6 @@
 </blockquote>
 
 <div id="parentDiv" class="container text-center">
-	<button class="btn btn-primary" onclick="submitSum()">SUBMIT</button>
+	<button class="btn btn-primary" onclick="submitSum()">SHOW ANSWER BELOW ME!</button>
 	<button class="btn btn-primary" onclick="clearAnswer()">CLEAR ANSWER</button>
 </div>
